# kinova-ros

kinova_bringup/launch/: kinova_robot.launch
kinova_control/launch/: kinova_control.launch
kinova_demo/: CMakeLists.txt
kinova_demo/nodes/kinova_demo/: fingers_action_client.py  go_home.py  play_trajectory.py  robot_control_modules.py
kinova_description/: CMakeLists.txt
kinova_description/launch/: display_kinova_robot.launch
kinova_description/meshes/collision/: arm.stl  base.stl  finger_distal.stl  finger_proximal.stl  forearm.stl  hand_2finger.stl  shoulder.stl  wrist_spherical_1.stl  wrist_spherical_2.stl
kinova_description/urdf/: j2n6s300_integration.xacro  j2s6s200.xacro  kinova_common.xacro
kinova_driver/: CMakeLists.txt
kinova_driver/include/kinova/: KinovaTypes.h
kinova_driver/include/kinova_driver/: kinova_arm.h  kinova_comm.h
kinova_driver/src/: kinova_arm.cpp  kinova_comm.cpp  kinova_fingers_action.cpp  kinova_joint_trajectory_controller.cpp
kinova_hri_estop/: CMakeLists.txt  package.xml
kinova_hri_estop/launch/: kinova_robot.launch
kinova_hri_estop/scripts/: estop_monitor
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
kinova_moveit/robot_configs/j2s6s300_moveit_config/: CMakeLists.txt
