<?xml version="1.0"?>
<package format="2">
  <name>kinova_hri_estop</name>
  <version>0.0.0</version>
  <description>The kinova_hri_estop package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hri_safety_sense</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>hri_safety_sense</build_export_depend>
  <build_export_depend>kinova_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>hri_safety_sense</exec_depend>
  <exec_depend>kinova_msgs</exec_depend>
</package>
